Finished portfolio details

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -5,7 +5,9 @@
 @import "./button.scss";
 @import "./grid.scss";
 @import "./navigation.scss";
+@import "./layouts.scss";
 @import "./portfolio.scss";
+@import "./portfolio-detail.scss";
 @import "./portfolio-manager.scss";
 @import "./portfolio-form.scss";
 @import "./portfolio-sidebar.scss";
@@ -14,4 +16,5 @@
 @import "./loaders.scss";
 @import "./blog-form.scss";
 @import "./modals.scss";
-@import "./react-draft-wysiwyg.scss"
+@import "./react-draft-wysiwyg.scss";
+@import "./rich-text-editor.scss"
